cmake_minimum_required(VERSION 3.0)
project(game)
set(SOURCES src/main.c src/init.c)
set(SDL2_INCLUDE_DIR "F:/code/i686-w64-mingw32/include")
set(SDL2_LIBRARY_DIR "F:/code/i686-w64-mingw32/lib")
include_directories(${SDL2_INCLUDE_DIR})
add_executable(game ${SOURCES})
target_link_libraries(game -lmingw32 ${SDL2_LIBRARY_DIR}/libSDL2main.a ${SDL2_LIBRARY_DIR}/libSDL2.dll.a ${SDL2_LIBRARY_DIR}/libSDL2_image.a -mwindows)